<resources>

    <!-- App name-->
    <string name="app_name">Calculator</string>

    <!-- Number,symbol source -->

    <!-- Note : -->
    <!-- num : Number -->
    <!-- sym : Symbol -->
    <string name="zero_num">0</string>
    <string name="nine_num">9</string>
    <string name="eight_num">8</string>
    <string name="seven_num">7</string>
    <string name="six_num">6</string>
    <string name="five_num">5</string>
    <string name="four_num">4</string>
    <string name="three_num">3</string>
    <string name="two_num">2</string>
    <string name="one_num">1</string>
    <string name="divide_sym">\u00F7</string>
    <string name="multiply_sym">\u00D7</string>
    <string name="substract_sym">-</string>
    <string name="add_sym">+</string>
    <string name="equal_sym">=</string>
    <string name="decimal_sym">,</string>
    <string name="clear_sym">AC</string>
    <string name="delete_sym">Del</string>
    <string name="percent_sym">%</string>
    <string name="openparentheses_sym">(</string>
    <string name="closeparentheses_sym">)</string>
    <string name="divide1x_sym">1/x</string>
    <string name="mc_sym">mc</string>
    <string name="mplus_sym">m+</string>
    <string name="mminus_sym">m-</string>
    <string name="mr_sym">mr</string>
    <string name="powerX2_sym">x<sup><small>2</small></sup> </string>
    <string name="powerX3_sym">x<sup><small>3</small></sup> </string>
    <string name="powerXx_sym">x<sup><small>x</small></sup> </string>
    <string name="natural_sym">e</string>
    <string name="naturalpowerx_sym">e<sup><small>x</small></sup></string>
    <string name="In_sym">In</string>
    <string name="log_sym">log</string>
    <string name="absolute_sym">|x|</string>
    <string name="sin_sym">sin</string>
    <string name="cos_sym">cos</string>
    <string name="tan_sym">tan</string>
    <string name="sinh_sym">sinh</string>
    <string name="cosh_sym">cosh</string>
    <string name="tanh_sym">tanh</string>
    <string name="degress_sym">Deg</string>
    <string name="radian_sym">Rad</string>
    <string name="pi_sym">\u03C0</string>
    <string name="factorial_sym">x!</string>
    <string name="root_sym">\u221A</string>
    <string name="yunderrooty_sym"><sup><small>y</small></sup>√y</string>
    <string name="inverse_sym">INV</string>
    <string name="invsin_sym">sin<sup><small>-1</small></sup></string>
    <string name="invcos_sym">cos<sup><small>-1</small></sup></string>
    <string name="invtan_sym">tan<sup><small>-1</small></sup></string>
    <string name="plusminus_sym">+/-</string>
    <string name="tenpowerx">10<sup><small>x</small></sup></string>
    <string name="derivative1">y<sup><small>\'</small></sup></string>
    <string name="error_sign">Kesalahan</string>
    <string name="empty_sign">Nilai kosong</string>
    <string name="memory_empty_sign">Memori kosong</string>

    <!-- String for show result-->
    <string name="naturalpowerx_sym_show">e^(</string>
    <string name="In_sym_show">In(</string>
    <string name="log_sym_show">log(</string>
    <string name="invsin_sym_show">sin^1(</string>
    <string name="invcos_sym_show">cos^1(></string>
    <string name="invtan_sym_show">tan^1(</string>
    <string name="sin_sym_show">sin(</string>
    <string name="cos_sym_show">cos(</string>
    <string name="tan_sym_show">tan(</string>
    <string name="sinh_sym_show">sinh(</string>
    <string name="cosh_sym_show">cosh(</string>
    <string name="tanh_sym_show">tanh(</string>

</resources>